Fix service tree scrollbar margin top

--- a/styles/service-sidebar.less
+++ b/styles/service-sidebar.less
@@ -15,6 +15,7 @@
     float: left;
     box-sizing: border-box;
     padding: 0px 8px;
+    margin-bottom: @service-tree-element-margin;
     line-height: 36px;
     width: 49%;
     width: 198px;
